--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Tutorial</title>
     </head>
-    <link rel="styleesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
     <body>
         <h1>Welcome to SunSoft Technologies !</h1>
         <hr>
