--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     </head>
     <link rel="stylesheet" href="styles.css"/>
     <body>
+        <br>
+        <div>
+            <a href="index.html" >HOME</a> |
+            <a href="about.html" >ABOUT US</a> |
+            <a href="service.html" >SERVICES</a> |
+            <a href="contact.html" >CONTACT US</a> |
+        </div>
+        <hr>
         <h1>Welcome to SunSoft Technologies !</h1>
         <hr>
+        <h3>Training</h3>
+        <p>Our training will be according to the Real Time Industry requirements so that the one who is already working as well as the one who is willing to get into industry, both will be benefited.</p>
+        <h3>Placements</h3>
+        <p>We have a highly qualified team which can help you to get placed in a good company where you can get nurtured and succeed further in professional life ahead.</p>
+        <h3>If you have a passion for sharing knowledge and a commitment to develop a highly skilled workforce that meets current IT Industry standards and benchmarks then this is the place for you.</h3>
     </body>
 </html>
